<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MoodEntryFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#27DED4"
    >

    <EditText
        android:id="@+id/mood_entry_name"
        android:layout_width="match_parent"
        android:lines="3"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <RadioGroup
        android:id="@+id/mood_entry_feeling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feeling_happy"
            android:background="@color/white"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feeling_ok"
            android:background="@color/black"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feeling_sad"
            android:background="@color/black"
            />
    </RadioGroup>

    <Spinner
        android:id="@+id/mood_entry_category"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        />

    <CheckBox
        android:id="@+id/mood_entry_checked_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_good_day"
        />

    <CheckBox
        android:id="@+id/mood_entry_checked_two"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/checkbox_exciting_day"
        />

    <CheckBox
        android:id="@+id/mood_entry_checked_three"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:text="@string/checkbox_forget_day"
        />

    <RatingBar
        android:id="@+id/mood_entry_rating"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:numStars="5"
        android:stepSize=".5"
        android:layout_gravity="center"
        />

    <Switch
        android:id="@+id/mood_entry_importance"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/switch_important_day"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/mood_entry_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:layout_gravity="center"
        />
</LinearLayout>